refactor into something maintainable

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
   <script src="bower_components/react/react.js"></script>
-  <script src="build/app.js"></script>
+  <script src="build/models.js"></script>
+  <script src="build/components.js"></script>
+  <script src="build/dispatcher.js"></script>
 </body>
 </html>
