--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
   <script src="bower_components/react/react.js"></script>
   <script src="build/models.js"></script>
   <script src="build/components.js"></script>
-  <script src="build/dispatcher.js"></script>
+  <script src="build/view.js"></script>
 </body>
 </html>
