--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
+  <script src="bower_components/Backbone.localStorage/Backbone.localStorage.js"></script>
   <script src="bower_components/react/react.js"></script>
   <script src="build/models.js"></script>
   <script src="build/components.js"></script>
